// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlogPost Template page > formatDiv renders correctly - inline code block 1`] = `
<div>
  <code>
    <code
      class="language-text"
    >
      test
    </code>
  </code>
</div>
`;

exports[`BlogPost Template page > formatDiv renders correctly 1`] = `
<div>
  <div>
    <p>
      test
    </p>
  </div>
</div>
`;

exports[`BlogPost Template page > renders correctly - featured image 1`] = `
<main>
  <div
    class="pt-48 pb-12"
  >
    <div
      class="mx-auto max-w-[832px] w-full px-6 lg:px-0 flex flex-col items-center justify-center"
    >
      <div
        class="self-stretch h-52 flex-col justify-center items-center gap-6 flex"
      >
        <div
          class="self-stretch h-32 flex-col justify-center items-center gap-4 flex"
        >
          <div
            class="justify-start items-center gap-3 inline-flex"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#FF1464"
                height="8"
                rx="2"
                width="8"
                x="3"
                y="3"
              />
              <rect
                height="11"
                rx="3.5"
                stroke="#FF1464"
                stroke-opacity="0.25"
                stroke-width="3"
                width="11"
                x="1.5"
                y="1.5"
              />
            </svg>
            <div
              class="text-rose-600 text-base font-bold leading-normal"
            >
              News article
            </div>
          </div>
          <h1
            class="self-stretch text-center text-white   text-[36px] lg:text-[48px] leading-[122.222%] lg:leading-[116.667%] font-semibold"
          >
            MDX Page title
          </h1>
        </div>
        <div
          class="self-stretch text-center text-grey text-grey-300 text-xl font-normal leading-7"
        >
          MDX Page excerpt
        </div>
        <div
          class="flex justify-center items-center gap-5"
        >
          <img
            alt="Adoptium PMC"
            image="[object Object]"
            stlye="[object Object]"
            style="margin-left: 0.5rem; margin-bottom: 0px; min-width: 30px; border-radius: 100%;"
          />
          <span
            class="text-[16px] font-bold leading-[150%] text-white"
          >
            <a
              href="/blog/author/pmc"
            >
              <span
                class="text-primary pr-2"
              >
                Adoptium PMC
                ,
              </span>
               
              2021-01-01
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="mx-auto w-full p-6 lg:px-0 flex flex-col items-center justify-center"
  >
    <div
      class="max-w-4xl"
    >
      <article>
        <header
          class="pb-5"
        >
          <div
            id="share-buttons"
          >
            <button
              aria-label="x"
              class="react-share__ShareButton"
              style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
            >
              <svg
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm297.1 84L257.3 234.6 379.4 396H283.8L209 298.1 123.3 396H75.8l111-126.9L69.7 116h98l67.7 89.5L313.6 116h47.5zM323.3 367.6L153.4 142.9H125.1L296.9 367.6h26.3z"
                />
              </svg>
            </button>
            <button
              aria-label="linkedin"
              class="react-share__ShareButton"
              style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
            >
              <svg
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                />
              </svg>
            </button>
            <button
              aria-label="facebook"
              class="react-share__ShareButton"
              style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
            >
              <svg
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"
                />
              </svg>
            </button>
            <button
              aria-label="reddit"
              class="react-share__ShareButton"
              style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
            >
              <svg
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M283.2 345.5c2.7 2.7 2.7 6.8 0 9.2-24.5 24.5-93.8 24.6-118.4 0-2.7-2.4-2.7-6.5 0-9.2 2.4-2.4 6.5-2.4 8.9 0 18.7 19.2 81 19.6 100.5 0 2.4-2.3 6.6-2.3 9 0zm-91.3-53.8c0-14.9-11.9-26.8-26.5-26.8-14.9 0-26.8 11.9-26.8 26.8 0 14.6 11.9 26.5 26.8 26.5 14.6 0 26.5-11.9 26.5-26.5zm90.7-26.8c-14.6 0-26.5 11.9-26.5 26.8 0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-11.9 26.8-26.5 0-14.9-11.9-26.8-26.8-26.8zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-99.7 140.6c-10.1 0-19 4.2-25.6 10.7-24.1-16.7-56.5-27.4-92.5-28.6l18.7-84.2 59.5 13.4c0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-12.2 26.8-26.8 0-14.6-11.9-26.8-26.8-26.8-10.4 0-19.3 6.2-23.8 14.9l-65.7-14.6c-3.3-.9-6.5 1.5-7.4 4.8l-20.5 92.8c-35.7 1.5-67.8 12.2-91.9 28.9-6.5-6.8-15.8-11-25.9-11-37.5 0-49.8 50.4-15.5 67.5-1.2 5.4-1.8 11-1.8 16.7 0 56.5 63.7 102.3 141.9 102.3 78.5 0 142.2-45.8 142.2-102.3 0-5.7-.6-11.6-2.1-17 33.6-17.2 21.2-67.2-16.1-67.2z"
                />
              </svg>
            </button>
            <button
              aria-label="email"
              class="react-share__ShareButton"
              style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
            >
              <svg
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zM218 271.7L64.2 172.4C66 156.4 79.5 144 96 144l256 0c16.5 0 30 12.4 31.8 28.4L230 271.7c-1.8 1.2-3.9 1.8-6 1.8s-4.2-.6-6-1.8zm29.4 26.9L384 210.4 384 336c0 17.7-14.3 32-32 32L96 368c-17.7 0-32-14.3-32-32l0-125.6 136.6 88.2c7 4.5 15.1 6.9 23.4 6.9s16.4-2.4 23.4-6.9z"
                />
              </svg>
            </button>
          </div>
        </header>
        <article
          class="prose prose-invert lg:prose-lg max-w-none"
        >
          sample blog
        </article>
        <div
          class="hidden md:flex justify-between items-center gap-10 py-10"
        >
          <div
            class="bg-[#3E3355] w-full h-[1px] "
          />
          <div
            class="flex flex-col items-center"
          >
            <p
              class="tab-button-text"
            >
              Share this post
            </p>
            <div
              class="flex items-center gap-4"
            >
              <a
                href="#share-buttons"
              >
                <button
                  class="bg-primary px-6 py-3 rounded-[80px] tab-button-text flex items-center gap-3"
                >
                  <svg
                    fill="currentColor"
                    height="25"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="25"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      id="Share_2"
                    >
                      <path
                        d="M18.44,15.94a2.5,2.5,0,0,0-1.96.95L7.97,12.64a2.356,2.356,0,0,0,0-1.29l8.5-4.25a2.5,2.5,0,1,0-.53-1.54,2.269,2.269,0,0,0,.09.65l-8.5,4.25a2.5,2.5,0,1,0,0,3.08l8.5,4.25a2.269,2.269,0,0,0-.09.65,2.5,2.5,0,1,0,2.5-2.5Zm0-11.88a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,18.44,4.06ZM5.56,13.5A1.5,1.5,0,1,1,7.06,12,1.5,1.5,0,0,1,5.56,13.5Zm12.88,6.44a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,18.44,19.94Z"
                      />
                    </g>
                  </svg>
                  Share
                </button>
              </a>
            </div>
          </div>
          <div
            class="bg-[#3E3355] w-full h-[1px] inline-block"
          />
        </div>
      </article>
      <div>
        <ul
          class="flex flex-wrap justify-between list-none p-0"
        >
          <li>
            <a
              href="/blog/next"
              rel="next"
            >
              ← 
              Next
            </a>
          </li>
          <li>
            <a
              href="/blog/previous"
              rel="prev"
            >
              Previous
               →
            </a>
          </li>
        </ul>
      </div>
    </div>
  </section>
  <div
    class="max-w-[1264px] px-6 mx-auto py-8 md:py-16"
  >
    <div
      class="max-w-[670px] mx-auto flex flex-col items-center justify-center"
    >
      <div
        class="text-5xl leading-[116%] text-white text-center font-semibold"
      >
        Related Articles
      </div>
      <div
        class="text-lightgrey mt-6 tab-button-text text-center"
      >
        Eclipse Temurin offers high-performance, cross-platform, open-source Java runtime binaries that are enterprise-ready and Java SE TCK-tested for general use in the Java ecosystem.
      </div>
      <a
        href="/news"
      >
        <button
          class="rounded-2xl bg-transparent gradient-border mt-10 border-2 border-pink-500/0 text-white text-base leading-6 font-bold w-[160px] h-[48px] block "
        >
          See all articles
        </button>
      </a>
    </div>
    <div
      class="flex justify-center flex-wrap items-center gap-5 pt-16"
    >
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 1
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 2
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 3
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 4
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
    </div>
  </div>
</main>
`;

exports[`BlogPost Template page > renders correctly 1`] = `
<main>
  <div
    class="pt-48 pb-12"
  >
    <div
      class="mx-auto max-w-[832px] w-full px-6 lg:px-0 flex flex-col items-center justify-center"
    >
      <div
        class="self-stretch h-52 flex-col justify-center items-center gap-6 flex"
      >
        <div
          class="self-stretch h-32 flex-col justify-center items-center gap-4 flex"
        >
          <div
            class="justify-start items-center gap-3 inline-flex"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#FF1464"
                height="8"
                rx="2"
                width="8"
                x="3"
                y="3"
              />
              <rect
                height="11"
                rx="3.5"
                stroke="#FF1464"
                stroke-opacity="0.25"
                stroke-width="3"
                width="11"
                x="1.5"
                y="1.5"
              />
            </svg>
            <div
              class="text-rose-600 text-base font-bold leading-normal"
            >
              News article
            </div>
          </div>
          <h1
            class="self-stretch text-center text-white   text-[36px] lg:text-[48px] leading-[122.222%] lg:leading-[116.667%] font-semibold"
          >
            MDX Page title
          </h1>
        </div>
        <div
          class="self-stretch text-center text-grey text-grey-300 text-xl font-normal leading-7"
        >
          MDX Page excerpt
        </div>
        <div
          class="flex justify-center items-center gap-5"
        >
          <img
            alt="Adoptium PMC"
            image="[object Object]"
            stlye="[object Object]"
            style="margin-left: 0.5rem; margin-bottom: 0px; min-width: 30px; border-radius: 100%;"
          />
          <span
            class="text-[16px] font-bold leading-[150%] text-white"
          >
            <a
              href="/blog/author/pmc"
            >
              <span
                class="text-primary pr-2"
              >
                Adoptium PMC
                ,
              </span>
               
              2021-01-01
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="mx-auto w-full p-6 lg:px-0 flex flex-col items-center justify-center"
  >
    <div
      class="max-w-4xl"
    >
      <article>
        <header
          class="pb-5"
        >
          <div
            id="share-buttons"
          >
            <button
              aria-label="x"
              class="react-share__ShareButton"
              style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
            >
              <svg
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm297.1 84L257.3 234.6 379.4 396H283.8L209 298.1 123.3 396H75.8l111-126.9L69.7 116h98l67.7 89.5L313.6 116h47.5zM323.3 367.6L153.4 142.9H125.1L296.9 367.6h26.3z"
                />
              </svg>
            </button>
            <button
              aria-label="linkedin"
              class="react-share__ShareButton"
              style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
            >
              <svg
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                />
              </svg>
            </button>
            <button
              aria-label="facebook"
              class="react-share__ShareButton"
              style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
            >
              <svg
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"
                />
              </svg>
            </button>
            <button
              aria-label="reddit"
              class="react-share__ShareButton"
              style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
            >
              <svg
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M283.2 345.5c2.7 2.7 2.7 6.8 0 9.2-24.5 24.5-93.8 24.6-118.4 0-2.7-2.4-2.7-6.5 0-9.2 2.4-2.4 6.5-2.4 8.9 0 18.7 19.2 81 19.6 100.5 0 2.4-2.3 6.6-2.3 9 0zm-91.3-53.8c0-14.9-11.9-26.8-26.5-26.8-14.9 0-26.8 11.9-26.8 26.8 0 14.6 11.9 26.5 26.8 26.5 14.6 0 26.5-11.9 26.5-26.5zm90.7-26.8c-14.6 0-26.5 11.9-26.5 26.8 0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-11.9 26.8-26.5 0-14.9-11.9-26.8-26.8-26.8zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-99.7 140.6c-10.1 0-19 4.2-25.6 10.7-24.1-16.7-56.5-27.4-92.5-28.6l18.7-84.2 59.5 13.4c0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-12.2 26.8-26.8 0-14.6-11.9-26.8-26.8-26.8-10.4 0-19.3 6.2-23.8 14.9l-65.7-14.6c-3.3-.9-6.5 1.5-7.4 4.8l-20.5 92.8c-35.7 1.5-67.8 12.2-91.9 28.9-6.5-6.8-15.8-11-25.9-11-37.5 0-49.8 50.4-15.5 67.5-1.2 5.4-1.8 11-1.8 16.7 0 56.5 63.7 102.3 141.9 102.3 78.5 0 142.2-45.8 142.2-102.3 0-5.7-.6-11.6-2.1-17 33.6-17.2 21.2-67.2-16.1-67.2z"
                />
              </svg>
            </button>
            <button
              aria-label="email"
              class="react-share__ShareButton"
              style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
            >
              <svg
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zM218 271.7L64.2 172.4C66 156.4 79.5 144 96 144l256 0c16.5 0 30 12.4 31.8 28.4L230 271.7c-1.8 1.2-3.9 1.8-6 1.8s-4.2-.6-6-1.8zm29.4 26.9L384 210.4 384 336c0 17.7-14.3 32-32 32L96 368c-17.7 0-32-14.3-32-32l0-125.6 136.6 88.2c7 4.5 15.1 6.9 23.4 6.9s16.4-2.4 23.4-6.9z"
                />
              </svg>
            </button>
          </div>
        </header>
        <article
          class="prose prose-invert lg:prose-lg max-w-none"
        >
          sample blog
        </article>
        <div
          class="hidden md:flex justify-between items-center gap-10 py-10"
        >
          <div
            class="bg-[#3E3355] w-full h-[1px] "
          />
          <div
            class="flex flex-col items-center"
          >
            <p
              class="tab-button-text"
            >
              Share this post
            </p>
            <div
              class="flex items-center gap-4"
            >
              <a
                href="#share-buttons"
              >
                <button
                  class="bg-primary px-6 py-3 rounded-[80px] tab-button-text flex items-center gap-3"
                >
                  <svg
                    fill="currentColor"
                    height="25"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="25"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      id="Share_2"
                    >
                      <path
                        d="M18.44,15.94a2.5,2.5,0,0,0-1.96.95L7.97,12.64a2.356,2.356,0,0,0,0-1.29l8.5-4.25a2.5,2.5,0,1,0-.53-1.54,2.269,2.269,0,0,0,.09.65l-8.5,4.25a2.5,2.5,0,1,0,0,3.08l8.5,4.25a2.269,2.269,0,0,0-.09.65,2.5,2.5,0,1,0,2.5-2.5Zm0-11.88a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,18.44,4.06ZM5.56,13.5A1.5,1.5,0,1,1,7.06,12,1.5,1.5,0,0,1,5.56,13.5Zm12.88,6.44a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,18.44,19.94Z"
                      />
                    </g>
                  </svg>
                  Share
                </button>
              </a>
            </div>
          </div>
          <div
            class="bg-[#3E3355] w-full h-[1px] inline-block"
          />
        </div>
      </article>
      <div>
        <ul
          class="flex flex-wrap justify-between list-none p-0"
        >
          <li>
            <a
              href="/blog/next"
              rel="next"
            >
              ← 
              Next
            </a>
          </li>
          <li>
            <a
              href="/blog/previous"
              rel="prev"
            >
              Previous
               →
            </a>
          </li>
        </ul>
      </div>
    </div>
  </section>
  <div
    class="max-w-[1264px] px-6 mx-auto py-8 md:py-16"
  >
    <div
      class="max-w-[670px] mx-auto flex flex-col items-center justify-center"
    >
      <div
        class="text-5xl leading-[116%] text-white text-center font-semibold"
      >
        Related Articles
      </div>
      <div
        class="text-lightgrey mt-6 tab-button-text text-center"
      >
        Eclipse Temurin offers high-performance, cross-platform, open-source Java runtime binaries that are enterprise-ready and Java SE TCK-tested for general use in the Java ecosystem.
      </div>
      <a
        href="/news"
      >
        <button
          class="rounded-2xl bg-transparent gradient-border mt-10 border-2 border-pink-500/0 text-white text-base leading-6 font-bold w-[160px] h-[48px] block "
        >
          See all articles
        </button>
      </a>
    </div>
    <div
      class="flex justify-center flex-wrap items-center gap-5 pt-16"
    >
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 1
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 2
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 3
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 4
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
    </div>
  </div>
</main>
`;
